--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && vite gh-pages"
   },
   "dependencies": {
     "ag-grid-community": "^32.1.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "vite": "^6.2.4",
+    "vite-plugin-gh-pages": "^1.0.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
